# Advance-payment

./: .gitignore  README.md  docker-compose-yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
contrib/: env-sample
core/: settings.py  urls.py
core/base/: urls.py  views.py
core/base/templates/base/: base.html  home.html
core/base/templates/registration/: login.html
core/base/tests/: test_home.py
core/payment/: admin.py  apps.py  models.py  urls.py  views.py
core/payment/migrations/: 0001_initial.py
core/payment/templates/payment/: payment.html
core/payment/tests/: test_payment.py
