[tool.poetry]
name = "advance-payment"
version = "0.1.0"
description = ""
authors = ["Vinicius Braga <Vbragadev@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "3.9.13"
python-decouple = "^3.6"
dj-database-url = "^1.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.4"
django-s3-folder-storage = "^0.5"
Collectfast = "^2.2.0"
Django = "^4.1.2"
django-extensions = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
